<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/main_hint_name_edit_text"
            android:inputType="textCapWords"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/toppings_title"
            style="@style/titles"
            android:layout_marginLeft="16dp"
            android:text="@string/main_toppings"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_edit_text" />

        <CheckBox
            android:id="@+id/whipped_cream_check_box"
            style="@style/check_boxes"
            android:onClick="updateTotal"
            android:text="@string/main_whipped_cream"
            app:layout_constraintLeft_toLeftOf="@id/toppings_title"
            app:layout_constraintTop_toBottomOf="@id/toppings_title" />

        <CheckBox
            android:id="@+id/chocolate_check_box"
            style="@style/check_boxes"
            android:onClick="updateTotal"
            android:text="@string/main_chocolate"
            app:layout_constraintLeft_toLeftOf="@id/whipped_cream_check_box"
            app:layout_constraintTop_toBottomOf="@id/whipped_cream_check_box" />

        <TextView
            android:id="@+id/quantity_title"
            style="@style/titles"
            android:text="@string/main_quantity"
            app:layout_constraintLeft_toLeftOf="@id/chocolate_check_box"
            app:layout_constraintTop_toBottomOf="@id/chocolate_check_box" />

        <Button
            android:id="@+id/minus_button"
            style="@style/quantity_buttons"
            android:onClick="decrement"
            android:text="@string/main_minus"
            app:layout_constraintLeft_toLeftOf="@id/quantity_title"
            app:layout_constraintTop_toBottomOf="@id/quantity_title" />

        <TextView
            android:id="@+id/quantity_text_view"
            style="@style/values"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toRightOf="@id/minus_button"
            app:layout_constraintTop_toTopOf="@id/minus_button" />

        <Button
            android:id="@+id/plus_button"
            style="@style/quantity_buttons"
            android:layout_marginLeft="8dp"
            android:onClick="increment"
            android:text="@string/main_plus"
            app:layout_constraintLeft_toRightOf="@id/quantity_text_view"
            app:layout_constraintTop_toBottomOf="@id/quantity_title" />

        <TextView
            android:id="@+id/price_title"
            style="@style/titles"
            android:text="@string/main_order_summary"
            app:layout_constraintLeft_toLeftOf="@id/quantity_title"
            app:layout_constraintTop_toBottomOf="@id/minus_button" />

        <TextView
            android:id="@+id/order_summary_text_view"
            style="@style/values"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="@id/price_title"
            app:layout_constraintTop_toBottomOf="@id/price_title" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/main_order"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/order_summary_text_view"
            app:layout_constraintTop_toBottomOf="@id/order_summary_text_view" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>